# MSFSPythonSimConnectMobiFlightExtension

./: pyproject.toml  setup.py
simconnect_mobiflight/src/: __init__.py
src/simconnect_mobiflight/: __init__.py
