[project]
name = "simconnect-mobiflight"
version = "0.3.0"
description = "Unofficial SimConnect extension for MobiFlight InputEvents support"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "simconnect"
]

[tool.setuptools]
packages = ["simconnect_mobiflight"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
