[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simconnect-mobiflight"
version = "0.3.0"
requires-python = ">=3.8"
dependencies = ["simconnect"]
description = "..."
readme = "README.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where   = ["src"]
include = ["simconnect_mobiflight*"]
